change some themes

--- a/.config/leftwm/themes/dref/picom.conf
+++ b/.config/leftwm/themes/dref/picom.conf
@@ -8,10 +8,11 @@
 #             Corners           #
 #################################
 corner-radius = 8.0;
+detect-rounded-corners = true;
 rounded-corners-exclude = [
   "class_g = 'Polybar'",
 ];
-round-borders = 1;
+round-borders = 5;
 round-borders-exclude = [
 ];
 
