--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -10,7 +10,7 @@ interval                 = 0.5
 format                   = <label>
 format-padding           = 1
 format-prefix            = ${icons.cpu}
-format-prefix-foreground = ${rosepine.cyan}
+format-prefix-foreground = ${rosepine.gold}
 format-warn              = <label-warn>
 label                    = %percentage:3%%
 label-warn               = CPU %percentage%%
@@ -19,11 +19,12 @@ type                     = internal/cpu
 
 [module/date]
 format                   = <label>
-format-padding			 = 1
-format-background		 = ${rosepine.background}
+format-padding		 = 1
+format-background	 = ${rosepine.base}
+format-foreground	 = ${rosepine.text}
 format-prefix            = ${icons.date}
-format-prefix-foreground = ${rosepine.yellow}
-format-prefix-background = ${rosepine.background}
+format-prefix-foreground = ${rosepine-dawn.gold}
+format-prefix-background = ${rosepine.base}
 interval                 = 1.0
 label                    = " %time%"
 time                     = %a, %d/%m/%y %H:%M:%S
@@ -33,7 +34,7 @@ type                     = internal/date
 fixed-values                     = false
 format-mounted                   = <label-mounted>
 format-mounted-prefix            = ${icons.filesystem}
-format-mounted-prefix-foreground = ${rosepine.magenta}
+format-mounted-prefix-foreground = ${rosepine.pine}
 interval                         = 1
 label-mounted                    = %used:3% of %total% (%percentage_used%%)
 mount-0                          = /
@@ -44,7 +45,7 @@ warn-percentage                  = 90
 format                   = <label>
 format-padding           = 1
 format-prefix            = ${icons.memory}
-format-prefix-foreground = ${rosepine.blue}
+format-prefix-foreground = ${rosepine.foam}
 interval                 = 1
 label                    = %percentage_used:3%% (%used%)
 type                     = internal/memory
@@ -54,14 +55,14 @@ warn-percentage          = 95
 accumulate-stats                   = false
 format-connected                   = <label-connected>
 format-connected-prefix            = ${icons.network-connected}
-format-connected-prefix-foreground = ${rosepine.green}
+format-connected-prefix-foreground = ${rosepine.iris}
 format-disconnected                = <label-disconnected>
 format-packetloss                  = <label-packetloss>
 interface                          = enp4s0
 interface-type                     = wired
 interval                           = 1.0
 label-connected                    = %downspeed:7%
-label-discconnected-foreground     = ${rosepine.red}
+label-discconnected-foreground     = ${rosepine.love}
 label-disconnected                 = ${icons.network-disconnected}
 label-packetloss                   = ${icons.network-loss}
 speed-unit                         = B
@@ -70,10 +71,10 @@ unknown-as-up                      = false
 
 [module/pulseaudio]
 format-volume            = <ramp-volume>
-format-volume-foreground = ${rosepine.yellow}
+format-volume-foreground = ${rosepine-dawn.gold}
 format-volume-background =
 label-muted              = ${icons.pulseaudio-mute}
-label-muted-foreground   = ${rosepine.red}
+label-muted-foreground   = ${rosepine-dawn.love}
 label-muted-background   = ${rosepine.background}
 ramp-volume-0            = ${icons.pulseaudio-0}
 ramp-volume-1            = ${icons.pulseaudio-1}
@@ -84,7 +85,7 @@ use-ui-max               = false
 
 [module/sep]
 content            = %{T5}%{T-}
-content-foreground = ${rosepine.yellow}
+content-foreground = ${rosepine-dawn.gold}
 content-padding    = 1
 type               = custom/text
 
@@ -93,7 +94,7 @@ click-left         = $MAINPATH/rofi/rofi-launcher.sh
 click-right        = $MAINPATH/rofi/rofi-launcher.sh
 content            = ${icons.sysmenu}
 content-font       =
-content-foreground = ${rosepine.yellow}
+content-foreground = ${rosepine-dawn.love}
 content-background =
 content-padding    = 1
 type               = custom/text
@@ -103,14 +104,14 @@ base-temperature      = 30
 format                = <ramp> <label>
 ;format-prefix         = ${icons.temperature-normal}
 format-padding        = 1
-format-foreground     = ${rosepine.blue}
+format-foreground     = ${rosepine-moon.pine}
 format-warn           = <ramp> <label-warn>
 format-warn-padding   = 1
 hwmon-path            = ${env:HWMON}
 interval              = 1.0
 label                 = %temperature-c%
 label-warn            = %temperature-c%
-label-warn-foreground = ${rosepine.red}
+label-warn-foreground = ${rosepine.love}
 ramp-0                = ${icons.temperature-cold}
 ramp-1                = ${icons.temperature-normal}
 ramp-2                = ${icons.temperature-hot}
@@ -124,10 +125,10 @@ exec     = "$polybar/archupdate"
 interval = 21600
 format-padding = 1
 format-prefix = ${icons.update}
-format-prefix-foreground = ${rosepine.yellow}
-format-prefix-background = ${rosepine.background}
-format-foreground = ${rosepine.foreground}
-format-background = ${rosepine.background}
+format-prefix-foreground = ${rosepine-dawn.gold}
+format-prefix-background = ${rosepine.base}
+format-foreground = ${rosepine.text}
+format-background = ${rosepine.base}
 label    = " %output% Update(s)"
 tail     = false
 type     = custom/script
@@ -138,10 +139,9 @@ exec     = uptime -p | sed -e 's/up //g' | sed -e 's/ hours, /h:/g' | sed -e 's/
 interval = 90
 format-padding = 1
 format-prefix = ${icons.uptime}
-format-prefix-foreground = ${rosepine.yellow}
-format-prefix-background = ${rosepine.background}
-format-foreground =
-format-background = ${rosepine.background}
+format-prefix-foreground = ${rosepine-dawn.gold}
+format-prefix-background = ${rosepine.base}
+format-background = ${rosepine.base}
 label    = " %output%"
 tail     = false
 type     = custom/script
@@ -180,3 +180,9 @@ label    = " %output%"
 tail     = false
 type     = custom/script
 
+abel-empty-padding = 2
+
+[module/tray]
+type = internal/tray
+format-margin = 8px
+tray-spacing = 8px
