--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,20 +1,20 @@
-set -g default-terminal "tmux-256color" # add 256 colors support to tmux.
-set -g base-index 1 # start index 1 instead of 0.
-set -s escape-time 0 # Set the escape time to 0 for faster key repetition.
-set -g mouse on # mouse support for tmux
+set-option -g default-terminal "tmux-256color" # add 256 colors support to tmux.
+set-option -g base-index 1 # start index 1 instead of 0.
+set-option -s escape-time 0 # Set the escape time to 0 for faster key repetition.
+set-option -g mouse on # mouse support for tmux
 
 # Nvim
 set-option -g focus-events on
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # Keybinds
-#unbind M
 #set-option -g prefix M
-#bind-key send-prefix
+set-option -g prefix C-b
+#bind-key M send-prefix
 bind -n M-r source-file ~/.config/tmux/tmux.conf # Hot-reloading tmux without restarting.
 
 # Pane
-bind -n M-a command-prompt -T window-target -p "#W" { join-pane -t "%%" }
+bind -n M-a command-prompt -T "Select window: " { joinp -t "%%"}
 bind -n M-h split-pane -h
 bind -n M-v split-pane -v
 bind -n M-q confirm-before -p "kill pane #P (y/n)?" kill-pane
@@ -47,60 +47,72 @@ bind -n M-n next-window
 
 # Vi
 set-window-option -g mode-keys vi # Enable vi keys.
-bind -n M-C-v copy-mode
+bind -n M-[ copy-mode
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# Set Vi style keybinding in the status line
-set -g status-keys vi
+# set-option Vi style keybinding in the status line
+set-option -g status-keys vi
 
 ## COLORSCHEME: gruvbox dark (medium)
 set-option -g status "on"
 
 # default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+set-option -g status-style bg=blue,fg=white 
 
 # default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+set-window-option -g window-status-style bg=blue,fg=white 
 
 # default window with an activity alert
 set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
 
 # active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+set-window-option -g window-status-current-style bg=red,fg=colour237 
 
 # pane border
-set-option -g pane-active-border-style fg=colour160 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
+set-option -g pane-active-border-style fg=red
+set-option -g pane-border-style fg=black 
+
+# pane number display
+#set-option -g display-panes-active-colour blue
+#set-option -g display-panes-colour colour237 
 
 # message infos
 #set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
 
 # writing commands inactive
-#set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
 
-# pane number display
-#set-option -g display-panes-active-colour colour250 #fg2
-#set-option -g display-panes-colour colour237 #bg1
 
 # clock
-#set-window-option -g clock-mode-colour colour109 #blue
+set-window-option -g clock-mode-colour colour109 #blue
 
 # bell
-#set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
 
-##Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-#set-option -g status-justify "left"
-#set-option -g status-left-style none
-#set-option -g status-left-length "80"
-#set-option -g status-right-style none
-#set-option -g status-right-length "80"
-#set-window-option -g window-status-separator ""
-
-#set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-#set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %d-%b-%Y %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
-
-#set-window-option -g window-status-current-format "#[bg=colour213,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour4,fg=colour239] #I #[bg=colour60,fg=colour15,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
-#set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
+# Status bar
+set-option -g status on
+set-option -g status-style "fg=#31748f,bg=#191724"
+# set-option monitor-activity "on"
+# set-option status-justify "left"
+set-option -g status-left-length "200"
+set-option -g status-right-length "200"
 
 
+# Theoretically messages (need to figure out color placement)
+set-option message-style "fg=#6e6a86,bg=#191724"
+set-option message-command-style "fg=#191724,bg=#f6c177"
+
+# Pane styling
+set-option pane-border-style "fg=#524f67"
+set-option pane-active-border-style "fg=#f6c177"
+set-option display-panes-active-colour "#e0def4"
+set-option display-panes-colour "#f6c177"
+
+# Windows
+set-option -g window-status-style "fg=#c4a7e7,bg=#191724"
+set-option -g window-status-activity-style "fg=#191724,bg=#ebbcba"
+set-option -g window-status-current-style "fg=#f6c177,bg=#191724"
+set-option -g window-status-separator "  "
+set-option -g clock-mode-colour "#eb6f92"
+set-option -g mode-style "fg=#f6c177"
