--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,3 +1,14 @@
+#################################
+#             Corners           #
+#################################
+corner-radius = 8.0;
+rounded-corners-exclude = [
+  "class_g = 'Polybar'",
+];
+round-borders = 1;
+round-borders-exclude = [
+];
+
 # Enabled client-side shadows on windows. Not
 #################################
 #             Shadows           #
@@ -205,11 +216,9 @@ daemon = false;
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = 'glx'
 backend = "glx";
 
 # Enable/disable VSync.
-# vsync = false
 vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
@@ -218,23 +227,19 @@ dbus = false;
 # Try to detect WM windows (a non-override-redirect window with no 
 # child that has 'WM_STATE') and mark them as active.
 #
-# mark-wmwin-focused = false
 mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
 mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them 
 # shaped windows. The accuracy is not very high, unfortunately.
 #
-# detect-rounded-corners = false
 detect-rounded-corners = true;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
 #
-# detect-client-opacity = false
 detect-client-opacity = true;
 
 # Specify refresh rate of the screen. If not specified or 0, picom will 
@@ -261,7 +266,7 @@ refresh-rate = 0;
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -272,14 +277,12 @@ refresh-rate = 0;
 # Use 'WM_TRANSIENT_FOR' to group windows, and consider windows 
 # in the same group focused at the same time.
 #
-# detect-transient = false
 detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
 # detect-transient is enabled, too.
 #
-# detect-client-leader = false
 detect-client-leader = true;
 
 # Resize damaged region by a specific number of pixels. 
@@ -319,7 +322,6 @@ glx-no-stencil = true;
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
 #
-# no-use-damage = false
 use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
