--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -2,7 +2,7 @@ include-file = modules.ini
 include-file = themes.ini
 
 [bar/main]
-background     = ${rosepine.background}
+background     = ${rosepine.base}
 bottom         = false
 enable-ipc     = true
 fixed-center   = true
@@ -11,13 +11,13 @@ font-1         = Fira Code Nerd Font:size=10:weight=bold;2
 font-2         = Fira Code Nerd Font:size=11:weight=bold;2
 font-3         = Fira Code Nerd Font:size=12:weight=bold;2
 font-4         = Fira Code Nerd Font:size=14:weight=bold;2
-foreground     = ${rosepine.foreground}
-height         = 30
+foreground     = ${rosepine.text}
+height         = 35
 locale         = ${env:LANG:pt_BR.UTF8}
 module-margin  = 0
-modules-center = network sep memory cpu temperature sep filesystem
 modules-left   = workspace
-modules-right  = update uptime date sep pulseaudio sep sysmenu
+modules-center = network sep memory cpu temperature sep filesystem
+modules-right  = update uptime date sep pulseaudio tray sysmenu
 monitor        = ${env:monitor}
 offset-x       = 0
 offset-y       = 0
@@ -55,7 +55,7 @@ pulseaudio-1         = %{T0} %{T-}
 pulseaudio-2         = %{T0} %{T-}
 pulseaudio-3         = %{T0} %{T-}
 pulseaudio-mute      = %{T0}󰝟 %{T-}
-sysmenu              = %{T0}⏻ %{T-}
+sysmenu              = %{T0} %{T-}
 temperature-cold     = %{T0}%{F#458588} %{F-}%{T-}
 temperature-normal   = %{T0}%{F#83a598}󰏈 %{F-}%{T-}
 temperature-hot      = %{T0}%{F#cc241d} %{F-}%{T-}
