--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,61 +1,15 @@
-[module/activity]
-click-left         = rofi -no-config -no-lazy-grab -show drun -theme.$HOME/.config/leftwm/gruvbox/color./current/polybar/rofi/launcher.rasi
-click-right        = rofi -no-config -no-lazy-grab -show drun -theme.$HOME/.config/leftwm/gruvbox/color./current/polybar/rofi/launcher.rasi
-content            = Applications
-content-foreground =
-type               = custom/text
-
-[module/cpu]
-interval                 = 0.5
-format                   = <label>
-format-padding           = 1
-format-prefix            = ${icons.cpu}
-format-prefix-foreground = ${rosepine.gold}
-format-warn              = <label-warn>
-label                    = %percentage:3%%
-label-warn               = CPU %percentage%%
-warn-percentage          = 75
-type                     = internal/cpu
-
-[module/date]
-format                   = <label>
-format-padding		 = 1
-format-background	 = ${rosepine.base}
-format-foreground	 = ${rosepine.text}
-format-prefix            = ${icons.date}
-format-prefix-foreground = ${rosepine-dawn.gold}
-format-prefix-background = ${rosepine.base}
-interval                 = 1.0
-label                    = " %time%"
-time                     = %a, %d/%m/%y %H:%M:%S
-type                     = internal/date
-
-[module/filesystem]
-fixed-values                     = false
-format-mounted                   = <label-mounted>
-format-mounted-prefix            = ${icons.filesystem}
-format-mounted-prefix-foreground = ${rosepine.pine}
-interval                         = 1
-label-mounted                    = %used:3% of %total% (%percentage_used%%)
-mount-0                          = /
-type                             = internal/fs
-warn-percentage                  = 90
-
-[module/memory]
-format                   = <label>
-format-padding           = 1
-format-prefix            = ${icons.memory}
-format-prefix-foreground = ${rosepine.foam}
-interval                 = 1
-label                    = %percentage_used:3%% (%used%)
-type                     = internal/memory
-warn-percentage          = 95
+[module/workspace]
+exec = leftwm-state -w $index -t $HOME/.config/leftwm/themes/dref/template.liquid
+tail = true
+type = custom/script
 
 [module/network]
 accumulate-stats                   = false
 format-connected                   = <label-connected>
 format-connected-prefix            = ${icons.network-connected}
 format-connected-prefix-foreground = ${rosepine.iris}
+format-connected-background 	   = ${rosepine.base}
+format-connected-foreground 	   = ${rosepine.text}
 format-disconnected                = <label-disconnected>
 format-packetloss                  = <label-packetloss>
 interface                          = enp4s0
@@ -69,42 +23,39 @@ speed-unit                         = B
 type                               = internal/network
 unknown-as-up                      = false
 
-[module/pulseaudio]
-format-volume            = <ramp-volume>
-format-volume-foreground = ${rosepine-dawn.gold}
-format-volume-background =
-label-muted              = ${icons.pulseaudio-mute}
-label-muted-foreground   = ${rosepine-dawn.love}
-label-muted-background   = ${rosepine.background}
-ramp-volume-0            = ${icons.pulseaudio-0}
-ramp-volume-1            = ${icons.pulseaudio-1}
-ramp-volume-2            = ${icons.pulseaudio-2}
-ramp-volume-3            = ${icons.pulseaudio-3}
-type                     = internal/pulseaudio
-use-ui-max               = false
+[module/memory]
+format                   = <label>
+format-padding           = 1
+format-prefix            = ${icons.memory}
+format-background 	 = ${rosepine.base}
+format-foreground 	 = ${rosepine.text}
+format-prefix-foreground = ${rosepine.foam}
+interval                 = 1
+label                    = %percentage_used:3%% (%used%)
+type                     = internal/memory
+warn-percentage          = 95
 
-[module/sep]
-content            = %{T5}%{T-}
-content-foreground = ${rosepine-dawn.gold}
-content-padding    = 1
-type               = custom/text
-
-[module/sysmenu]
-click-left         = $MAINPATH/rofi/rofi-launcher.sh
-click-right        = $MAINPATH/rofi/rofi-launcher.sh
-content            = ${icons.sysmenu}
-content-font       =
-content-foreground = ${rosepine-dawn.love}
-content-background =
-content-padding    = 1
-type               = custom/text
+[module/cpu]
+interval                 = 0.5
+format                   = <label>
+format-background 	 = ${rosepine.base}
+format-foreground 	 = ${rosepine.text}
+format-padding           = 1
+format-prefix            = ${icons.cpu}
+format-prefix-foreground = ${rosepine.gold}
+format-warn              = <label-warn>
+label                    = %percentage:3%%
+label-warn               = %percentage%%
+warn-percentage          = 75
+type                     = internal/cpu
 
 [module/temperature]
 base-temperature      = 30
 format                = <ramp> <label>
 ;format-prefix         = ${icons.temperature-normal}
 format-padding        = 1
-format-foreground     = ${rosepine-moon.pine}
+format-background     = ${rosepine.base}
+format-foreground     = ${rosepine-moon.text}
 format-warn           = <ramp> <label-warn>
 format-warn-padding   = 1
 hwmon-path            = ${env:HWMON}
@@ -120,8 +71,21 @@ type                  = internal/temperature
 units                 = true
 warn-temperature      = 75
 
+[module/filesystem]
+fixed-values                     = false
+format-mounted                   = <label-mounted>
+format-mounted-background	 = ${rosepine.base}
+format-mounted-foreground	 = ${rosepine.text}
+format-mounted-prefix            = ${icons.filesystem}
+format-mounted-prefix-foreground = ${rosepine.pine}
+interval                         = 1
+label-mounted                    = %used:3% of %total% (%percentage_used%%)
+mount-0                          = /
+type                             = internal/fs
+warn-percentage                  = 90
+
 [module/update]
-exec     = "$polybar/archupdate"
+exec     = "$polybar/scripts/archupdate"
 interval = 21600
 format-padding = 1
 format-prefix = ${icons.update}
@@ -133,24 +97,6 @@ label    = " %output% Update(s)"
 tail     = false
 type     = custom/script
 click-left = dunstctl history-pop
-
-[module/uptime]
-exec     = uptime -p | sed -e 's/up //g' | sed -e 's/ hours, /h:/g' | sed -e 's/ minutes/m/g'
-interval = 90
-format-padding = 1
-format-prefix = ${icons.uptime}
-format-prefix-foreground = ${rosepine-dawn.gold}
-format-prefix-background = ${rosepine.base}
-format-background = ${rosepine.base}
-label    = " %output%"
-tail     = false
-type     = custom/script
-
-
-[module/workspace]
-exec = leftwm-state -w $index -t $HOME/.config/leftwm/themes/dref/template.liquid
-tail = true
-type = custom/script
 
 [module/vpn]
 exec     = $HOME/.config/polybar/vpn status
@@ -179,10 +125,66 @@ format-background =
 label    = " %output%"
 tail     = false
 type     = custom/script
+label-empty-padding = 2
 
-abel-empty-padding = 2
+[module/uptime]
+exec     = uptime -p | sed -e 's/up //g' | sed -e 's/ hours, /h:/g' | sed -e 's/ minutes/m/g'
+interval = 90
+format-padding = 1
+format-prefix = ${icons.uptime}
+format-prefix-foreground = ${rosepine-dawn.gold}
+;format-prefix-background = ${rosepine.base}
+format-background = ${rosepine.base}
+label    = " %output%"
+tail     = false
+type     = custom/script
+
+[module/date]
+format                   = <label>
+format-padding		 = 1
+format-background	 = ${rosepine.base}
+format-foreground	 = ${rosepine.text}
+format-prefix            = ${icons.date}
+format-prefix-foreground = ${rosepine-dawn.gold}
+;format-prefix-background = ${rosepine.base}
+interval                 = 1.0
+label                    = " %time%"
+time                     = %A, %d/%m/%y %H:%M:%S
+type                     = internal/date
+
+[module/pulseaudio]
+format-volume            = <ramp-volume>
+format-volume-padding	 = 1
+format-volume-foreground = ${rosepine-dawn.iris}
+format-volume-background = ${rosepine.base}
+label-muted              = ${icons.pulseaudio-mute}
+label-muted-foreground   = ${rosepine-dawn.love}
+label-muted-background   = ${rosepine.background}
+ramp-volume-0            = ${icons.pulseaudio-0}
+ramp-volume-1            = ${icons.pulseaudio-1}
+ramp-volume-2            = ${icons.pulseaudio-2}
+ramp-volume-3            = ${icons.pulseaudio-3}
+type                     = internal/pulseaudio
+use-ui-max               = false
+
+[module/sysmenu]
+click-left         = $MAINPATH/rofi/rofi-launcher.sh
+click-right        = $MAINPATH/rofi/rofi-launcher.sh
+content            = ${icons.sysmenu}
+content-foreground = ${rosepine-dawn.iris}
+content-background =${rosepine.base}
+content-padding    = 1
+type               = custom/text
 
 [module/tray]
 type = internal/tray
 format-margin = 8px
+format-background = ${rosepine.highlight-low}
 tray-spacing = 8px
+
+[module/sep]
+content            = %{T5}%{T-}
+content-foreground = ${rosepine-dawn.gold}
+content-padding    = 1
+type               = custom/text
+
