--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -1,5 +1,5 @@
 include-file = modules.ini
-include-file = themes.ini
+include-file = themes/rose-pine.ini
 
 [bar/main]
 background     = ${rosepine.base}
@@ -14,10 +14,10 @@ font-4         = Fira Code Nerd Font:size=14:weight=bold;2
 foreground     = ${rosepine.text}
 height         = 35
 locale         = ${env:LANG:pt_BR.UTF8}
-module-margin  = 0
+module-margin  = 1
 modules-left   = workspace
-modules-center = network sep memory cpu temperature sep filesystem
-modules-right  = update uptime date sep pulseaudio tray sysmenu
+modules-center = network memory cpu temperature filesystem
+modules-right  = uptime date pulseaudio tray sysmenu
 monitor        = ${env:monitor}
 offset-x       = 0
 offset-y       = 0
@@ -25,13 +25,6 @@ padding        = 2
 radius-bottom  = 2.0
 radius-top     = 0.0
 width          = 100%
-
-[bar/bottom10]
-inherit = bar/main
-bottom         = true
-modules-left =
-modules-center = vpn
-modules-right =
 
 [bar/main0]
 inherit = bar/main
