--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -100,19 +100,19 @@ set-option -g status-right-length "200"
 
 
 # Theoretically messages (need to figure out color placement)
-set-option message-style "fg=#6e6a86,bg=#191724"
-set-option message-command-style "fg=#191724,bg=#f6c177"
+#set-option message-style "fg=#6e6a86,bg=#191724"
+#set-option message-command-style "fg=#191724,bg=#f6c177"
 
 # Pane styling
-set-option pane-border-style "fg=#524f67"
-set-option pane-active-border-style "fg=#f6c177"
-set-option display-panes-active-colour "#e0def4"
-set-option display-panes-colour "#f6c177"
+#set-option pane-border-style "fg=#524f67"
+#set-option pane-active-border-style "fg=#f6c177"
+#set-option display-panes-active-colour "#e0def4"
+#set-option display-panes-colour "#f6c177"
 
 # Windows
-set-option -g window-status-style "fg=#c4a7e7,bg=#191724"
-set-option -g window-status-activity-style "fg=#191724,bg=#ebbcba"
-set-option -g window-status-current-style "fg=#f6c177,bg=#191724"
-set-option -g window-status-separator "  "
-set-option -g clock-mode-colour "#eb6f92"
-set-option -g mode-style "fg=#f6c177"
+#set-option -g window-status-style "fg=#c4a7e7,bg=#191724"
+#set-option -g window-status-activity-style "fg=#191724,bg=#ebbcba"
+#set-option -g window-status-current-style "fg=#f6c177,bg=#191724"
+#set-option -g window-status-separator "  "
+#set-option -g clock-mode-colour "#eb6f92"
+#set-option -g mode-style "fg=#f6c177"
