--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,29 +1,48 @@
-set-option -g default-terminal "tmux-256color" # add 256 colors support to tmux.
-set-option -g base-index 1 # start index 1 instead of 0.
-set-option -s escape-time 0 # Set the escape time to 0 for faster key repetition.
-set-option -g mouse on # mouse support for tmux
+set -g default-terminal "screen-256color"
+set-option -g base-index 1
+set-option -s escape-time 0
+set-option -g mouse on
 
 # Nvim
 set-option -g focus-events on
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -ga terminal-overrides ",xterm-256color:Tc"
 
-# Keybinds
-#set-option -g prefix M
-set-option -g prefix C-b
-#bind-key M send-prefix
-bind -n M-r source-file ~/.config/tmux/tmux.conf # Hot-reloading tmux without restarting.
+# Theme
+set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+set -g @rose_pine_show_pane_directory 'on'
+set -g @rose_pine_prioritize_windows 'on' # Disables the right side functionality in a certain window count / terminal width
+set -g @rose_pine_width_to_hide '80' # Specify a terminal width to toggle off most of the right side functionality
+set -g @rose_pine_window_count '5' # Specify a number of windows, if there are more than the number, do the same as width_to_hide
+
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+set -g prefix C-a
+set-option -g status-position top
+
+# Remap
+bind -n M-Space next-layout
+bind -n M-e select-layout -E
+
+# Vi
+set-option -g status-keys vi
+set-window-option -g mode-keys vi 
+bind -n M-[ copy-mode
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Pane
-bind -n M-a command-prompt -T "Select window: " { joinp -t "%%"}
+bind -n M-q confirm-before -p "Kill Pane #P (y/n)" kill-pane
 bind -n M-h split-pane -h
 bind -n M-v split-pane -v
-bind -n M-q confirm-before -p "kill pane #P (y/n)?" kill-pane
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
 bind -n M-! break-pane
-bind -n M-e select-layout -E
+bind -n M-Up select-pane -U 
+bind -n M-Down select-pane -D 
+bind -n M-Left select-pane -L 
+bind -n M-Right select-pane -R 
+bind -n M-C-Down  resize-pane -D 5
+bind -n M-C-Left  resize-pane -L 5
+bind -n M-C-Right resize-pane -R 5
+bind -n M-C-Up    resize-pane -U 5
 
 # Window
 bind -n M-0 select-window -t 0
@@ -35,84 +54,13 @@ bind -n M-5 select-window -t 5
 bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
-bind -n M-C-Down  resize-pane -D 5
-bind -n M-C-Left  resize-pane -L 5
-bind -n M-C-Right resize-pane -R 5
-bind -n M-C-Up    resize-pane -U 5
-bind -n M-F1 next-layout
 bind -n M-c new-window
 bind -n M-p previous-window
 bind -n M-n next-window
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'rose-pine/tmux'
 
-# Vi
-set-window-option -g mode-keys vi # Enable vi keys.
-bind -n M-[ copy-mode
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
-# set-option Vi style keybinding in the status line
-set-option -g status-keys vi
-
-## COLORSCHEME: gruvbox dark (medium)
-set-option -g status "on"
-
-# default statusbar color
-set-option -g status-style bg=blue,fg=white 
-
-# default window title colors
-set-window-option -g window-status-style bg=blue,fg=white 
-
-# default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
-
-# active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 
-
-# pane border
-set-option -g pane-active-border-style fg=red
-set-option -g pane-border-style fg=black 
-
-# pane number display
-#set-option -g display-panes-active-colour blue
-#set-option -g display-panes-colour colour237 
-
-# message infos
-#set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-# writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-
-# clock
-set-window-option -g clock-mode-colour colour109 #blue
-
-# bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
-
-# Status bar
-set-option -g status on
-set-option -g status-style "fg=#31748f,bg=#191724"
-# set-option monitor-activity "on"
-# set-option status-justify "left"
-set-option -g status-left-length "200"
-set-option -g status-right-length "200"
-
-
-# Theoretically messages (need to figure out color placement)
-#set-option message-style "fg=#6e6a86,bg=#191724"
-#set-option message-command-style "fg=#191724,bg=#f6c177"
-
-# Pane styling
-#set-option pane-border-style "fg=#524f67"
-#set-option pane-active-border-style "fg=#f6c177"
-#set-option display-panes-active-colour "#e0def4"
-#set-option display-panes-colour "#f6c177"
-
-# Windows
-#set-option -g window-status-style "fg=#c4a7e7,bg=#191724"
-#set-option -g window-status-activity-style "fg=#191724,bg=#ebbcba"
-#set-option -g window-status-current-style "fg=#f6c177,bg=#191724"
-#set-option -g window-status-separator "  "
-#set-option -g clock-mode-colour "#eb6f92"
-#set-option -g mode-style "fg=#f6c177"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
