--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -84,8 +84,8 @@ mount-0                          = /
 type                             = internal/fs
 warn-percentage                  = 90
 
-[module/update]
-exec     = "$polybar/scripts/archupdate"
+[module/archupdate]
+exec     = "$polybar/scripts/goarchupdate"
 interval = 21600
 format-padding = 1
 format-prefix = ${icons.update}
@@ -93,10 +93,11 @@ format-prefix-foreground = ${rosepine-dawn.gold}
 format-prefix-background = ${rosepine.base}
 format-foreground = ${rosepine.text}
 format-background = ${rosepine.base}
-label    = " %output% Update(s)"
+label    = " %output% "
 tail     = false
 type     = custom/script
 click-left = dunstctl history-pop
+double-click-right = "$polybar/scripts/goarchupdate"
 
 [module/vpn]
 exec     = $HOME/.config/polybar/vpn status
@@ -114,8 +115,8 @@ click-left = $HOME/.config/polybar/vpn toggle
 click-right = $HOME/.config/polybar/vpn update_status
  
 [module/online]
-exec     = $HOME/.config/polybar/checkonline
-interval = 60
+exec     = "$polybar/scripts/archupdate online"
+interval = 21600
 format-padding = 1
 format-prefix = 
 format-prefix-foreground = ${rosepine.red}
@@ -126,6 +127,8 @@ label    = " %output%"
 tail     = false
 type     = custom/script
 label-empty-padding = 2
+double-click-right = $polybar/scritps/archupdate online
+
 
 [module/uptime]
 exec     = uptime -p | sed -e 's/up //g' | sed -e 's/ hours, /h:/g' | sed -e 's/ minutes/m/g'
