--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -17,7 +17,7 @@ locale         = ${env:LANG:pt_BR.UTF8}
 module-margin  = 1
 modules-left   = workspace
 modules-center = network memory cpu temperature filesystem
-modules-right  = update uptime date pulseaudio tray sysmenu
+modules-right  = archupdate uptime date pulseaudio tray sysmenu
 monitor        = ${env:monitor}
 offset-x       = 0
 offset-y       = 0
