--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,8 +32,8 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 
 # Pane
 bind -n M-q confirm-before -p "Kill Pane #P (y/n)" kill-pane
-bind -n M-h split-pane -h
-bind -n M-v split-pane -v
+bind -n M-h split-pane -h -c '#{pane_current_path}'
+bind -n M-v split-pane -v -c '#{pane_current_path}'
 bind -n M-! break-pane
 bind -n M-Up select-pane -U 
 bind -n M-Down select-pane -D 
