--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/themes/themes/rose-pine.toml"]
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -127,3 +126,9 @@ instance = "Alacritty"
 [window.padding]
 x = 6
 y = 6
+
+[general]
+import = ["~/.config/alacritty/themes/themes/catppuccin_macchiato.toml"]
+
+[terminal]
+shell = { program = "/usr/bin/tmux", args = ["new","-A","-s","alacritty"] }
