--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -85,7 +85,7 @@ type                             = internal/fs
 warn-percentage                  = 90
 
 [module/archupdate]
-exec     = "$polybar/scripts/goarchupdate"
+exec     = "$DOTFILES/scripts/goarchupdate"
 interval = 21600
 format-padding = 1
 format-prefix = ${icons.update}
@@ -96,8 +96,8 @@ format-background = ${rosepine.base}
 label    = " %output% "
 tail     = false
 type     = custom/script
-click-left = dunstctl history-pop
-double-click-right = "$polybar/scripts/goarchupdate"
+click-left = dunstctl history-pop 755
+double-click-left = "$polybar/scripts/goarchupdate"
 
 [module/vpn]
 exec     = $HOME/.config/polybar/vpn status
@@ -171,8 +171,8 @@ type                     = internal/pulseaudio
 use-ui-max               = false
 
 [module/sysmenu]
-click-left         = $MAINPATH/rofi/rofi-launcher.sh
-click-right        = $MAINPATH/rofi/rofi-launcher.sh
+click-left         = $DOTFILES/scripts/powermenu.sh
+click-right        = $DOTFILES/scripts/powermenu.sh
 content            = ${icons.sysmenu}
 content-foreground = ${rosepine-dawn.iris}
 content-background =${rosepine.base}
