--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -52,9 +52,9 @@ sysmenu              = %{T0} %{T-}
 temperature-cold     = %{T0}%{F#458588} %{F-}%{T-}
 temperature-normal   = %{T0}%{F#83a598}󰏈 %{F-}%{T-}
 temperature-hot      = %{T0}%{F#cc241d} %{F-}%{T-}
-update               = %{T0} %{T-}
+update               = %{T4}%{F82E0AA}󰚰 %{F-}%{T-}
 uptime               = %{T0}󱎫 %{T-}
 vpnc        	     = %{T0}󰊠 %{T-}
 vpnd                 = %{T0}󰧵 %{T-}
-
+backup =  
 
