--- a/etc/systemd/system/getty@tty1.service.d/autologin.conf
+++ b/etc/systemd/system/getty@tty1.service.d/autologin.conf
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=-/sbin/agetty -o '-p -f -- \\u' --noclear --autologin dref - $TERM
+ExecStart=-/sbin/agetty -o '-p -f -- \\u' --noclear --autologin username %I $TERM
