--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -114,22 +114,6 @@ type     = custom/script
 click-left = $HOME/.config/polybar/vpn toggle
 click-right = $HOME/.config/polybar/vpn update_status
  
-[module/online]
-exec     = "$polybar/scripts/archupdate online"
-interval = 21600
-format-padding = 1
-format-prefix = 
-format-prefix-foreground = ${rosepine.red}
-format-prefix-background = ${rosepine.background}
-format-foreground = ${rosepine.red}
-format-background = 
-label    = " %output%"
-tail     = false
-type     = custom/script
-label-empty-padding = 2
-double-click-right = $polybar/scritps/archupdate online
-
-
 [module/uptime]
 exec     = uptime -p | sed -e 's/up //g' | sed -e 's/ hours, /h:/g' | sed -e 's/ minutes/m/g'
 interval = 90
@@ -152,7 +136,7 @@ format-prefix-foreground = ${rosepine-dawn.gold}
 ;format-prefix-background = ${rosepine.base}
 interval                 = 1.0
 label                    = " %time%"
-time                     = %A, %d/%m/%y %H:%M:%S
+time                     = %A, %d/%m/%y %H:%M
 type                     = internal/date
 
 [module/pulseaudio]
@@ -162,7 +146,7 @@ format-volume-foreground = ${rosepine-dawn.iris}
 format-volume-background = ${rosepine.base}
 label-muted              = ${icons.pulseaudio-mute}
 label-muted-foreground   = ${rosepine-dawn.love}
-label-muted-background   = ${rosepine.background}
+label-muted-background   = ${rosepine.base}
 ramp-volume-0            = ${icons.pulseaudio-0}
 ramp-volume-1            = ${icons.pulseaudio-1}
 ramp-volume-2            = ${icons.pulseaudio-2}
