--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,17 +7,10 @@ set-option -g mouse on
 set-option -g focus-events on
 set -ga terminal-overrides ",xterm-256color:Tc"
 
-# Theme
-set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
-set -g @rose_pine_show_pane_directory 'on'
-set -g @rose_pine_prioritize_windows 'on' # Disables the right side functionality in a certain window count / terminal width
-set -g @rose_pine_width_to_hide '80' # Specify a terminal width to toggle off most of the right side functionality
-set -g @rose_pine_window_count '5' # Specify a number of windows, if there are more than the number, do the same as width_to_hide
 
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind -n M-r source-file ~/.config/tmux/tmux.conf
 set -g prefix C-a
-set-option -g status-position top
 
 # Remap
 bind -n M-Space next-layout
@@ -26,12 +19,14 @@ bind -n M-e select-layout -E
 # Vi
 set-option -g status-keys vi
 set-window-option -g mode-keys vi 
-bind -n M-[ copy-mode
+bind -n M-i copy-mode
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Pane
 bind -n M-q confirm-before -p "Kill Pane #P (y/n)" kill-pane
+#bind -n M-j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind -n M-s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 bind -n M-h split-pane -h -c '#{pane_current_path}'
 bind -n M-v split-pane -v -c '#{pane_current_path}'
 bind -n M-! break-pane
@@ -43,6 +38,7 @@ bind -n M-C-Down  resize-pane -D 5
 bind -n M-C-Left  resize-pane -L 5
 bind -n M-C-Right resize-pane -R 5
 bind -n M-C-Up    resize-pane -U 5
+
 
 # Window
 bind -n M-0 select-window -t 0
@@ -58,9 +54,32 @@ bind -n M-c new-window
 bind -n M-p previous-window
 bind -n M-n next-window
 
+# Status Options
+set-option -g status-position top
+
+# use a theme
+set -g @tmux2k-theme 'onedark'
+#
+## to show icons only
+#set -g @tmux2k-icons-only true
+#
+## to customize duo bg and fg
+#set -g @tmux2k-duo-fg "#1688f0" # this will get you duo blue shown above
+#set -g @tmux2k-duo-bg "#000000" # this will set the bg for duo theme
+#
+## to set powerline symbols
+#set -g @tmux2k-right-sep  # alternate right status bar sep
+#set -g @tmux2k-win-right-sep  # alternate window right sep
+#
+## to not show powerline
+#set -g @tmux2k-show-powerline false
+#
+## set start icon, accpets: `session`, 'window`, or any string
+#set -g @tmux2k-start-icon ""
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'rose-pine/tmux'
+set -g @plugin '2kabhishek/tmux2k'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
