--- a/home/.fdignore
+++ b/home/.fdignore
@@ -1,19 +1,7 @@
 *.git
 *.gitignore
-/.local
-/.vim
+Brave*/
 /.cache
 /.cargo
-/.java
+/.local
 /go/
-/packages/
-/.bkp*/
-*/Brave*
-*/VirtualBox/
-/VirtualBox*/
-/Burp*
-/.Burp*
-/.oh-my*
-/.rustup
-/.mozilla
-/paru/
