--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -85,7 +85,7 @@ type                             = internal/fs
 warn-percentage                  = 90
 
 [module/archupdate]
-exec     = "$DOTFILES/scripts/goarchupdate"
+exec     = "$DOTFILES/scripts/archtools update --count --notify"
 interval = 21600
 format-padding = 1
 format-prefix = ${icons.update}
@@ -97,7 +97,8 @@ label    = " %output% "
 tail     = false
 type     = custom/script
 click-left = dunstctl history-pop 755
-double-click-left = "$polybar/scripts/goarchupdate"
+double-click-left = "$DOTFILES/scripts/archtools update --count --notify"
+ 
 
 [module/vpn]
 exec     = $HOME/.config/polybar/vpn status
